Add Styless.css and nex Index features

--- a/index.html
+++ b/index.html
@@ -4,8 +4,94 @@
         <title>Kristijan's Portfolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Kristijan Kokor">
+        <meta name="description" content="This is my portfolio page as a frontend developer.">
+        <link rel="icon" type="image/x-icon" href="Favicon.ico">
+        <link rel="stylesheet" href="Styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>My portfolio</h1>
+        <header>
+            <div>
+                <a href="Contacts.html">Contacts</a>
+            </div>
+            <div>
+                <a href="Projects.html">Projects</a>
+            </div>
+        </header>
+        <main>
+            <h1>Welcome to my portfolio page</h1>
+            <div class="date_p">
+                <p>Since 2025</p>
+            </div>
+            <section>
+                <h2>About me</h2>
+                <p>
+                        My name is Kristijan Kokor.
+                        I am a 25 year old rising programmer living in Vinkovci, a small city in Croatia. I aspire to become a frontend developer. 
+                </p>
+            </section>
+            <section>
+                <h2>My interests</h2>
+                <ul>
+                    <li>Studying history</li>
+                    <li>Programming in Dart</li>
+                    <li>Watching movies and shows</li>
+                    <li>Enjoying life!</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Price list</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Q1</th>
+                            <th>Q2</th>
+                            <th>Q3</th>
+                            <th>Q4</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Sat</td>
+                            <td>5€</td>
+                            <td>6€</td>
+                            <td>6€</td>
+                            <td>5€</td>
+                        </tr>
+                        <tr>
+                            <td>Dan</td>
+                            <td>30€</td>
+                            <td>40€</td>
+                            <td>40€</td>
+                            <td>30€</td>
+                        </tr>
+                        <tr>
+                            <td>Tjedan</td>
+                            <td>300€</td>
+                            <td>400€</td>
+                            <td>400€</td>
+                            <td>300€</td>
+                        </tr>
+                        <tr>
+                            <td>Mjesec</td>
+                            <td>1000€</td>
+                            <td>1200€</td>
+                            <td>1200€</td>
+                            <td>1000€</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </main>
+        <footer>
+            <section>
+                <small>@myCompany</small>
+                <address><a type="mail">kristijankokor2000gmail.com</a></address>
+            </section>
+        </footer>
     </body>
 </html>
