Add new thing to Styles.css

--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
     </head>
     <body>
         <header>
-            <div>
+            <nav>
                 <a href="Contacts.html">Contacts</a>
-            </div>
-            <div>
                 <a href="Projects.html">Projects</a>
-            </div>
-        </header>
-        <main>
+            </nav>
             <h1>Welcome to my portfolio page</h1>
             <div class="date_p">
                 <p>Since 2025</p>
             </div>
+        </header>
+        <main>
             <section>
                 <h2>About me</h2>
                 <p>
@@ -41,6 +39,14 @@
                     <li>Watching movies and shows</li>
                     <li>Enjoying life!</li>
                 </ul>
+            </section>
+            <section>
+                <h2>Projects</h2>
+                <p>
+                        My projects will be listed here.
+                        <br>
+                        <em>Soon.</em>
+                </p>
             </section>
             <section>
                 <h2>Price list</h2>
@@ -90,7 +96,7 @@
         <footer>
             <section>
                 <small>@myCompany</small>
-                <address><a type="mail">kristijankokor2000gmail.com</a></address>
+                <address><a href="mailto:kristijankokor2000gmail.com">kristijankokor2000gmail.com</a></address>
             </section>
         </footer>
     </body>
